[gd_scene load_steps=7 format=2]

[ext_resource path="res://Survivor.png" type="Texture" id=1]
[ext_resource path="res://Shooter.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 331.593

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25.7656, 36.8363 )

[sub_resource type="Animation" id=4]
resource_name = "damage"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.000955475, 0.0496847, 0.098605 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Shooter" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 35
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0305066, -0.0733185 )
scale = Vector2( 0.538655, 0.615833 )
frames = SubResource( 2 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 4 )

[node name="ShotTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
